<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:text="@string/company_name"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/eb_company_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:text="@string/staff_id"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/eb_company_staffId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:text="@string/policy_no"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/eb_policy_ref"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:text="@string/policy_date"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <TextView
            android:id="@+id/eb_effective_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    </LinearLayout>
</LinearLayout>