<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <LinearLayout
        android:id="@+id/vehicle_search_layout_lines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:isScrollContainer="false"
        android:weightSum="3"
        android:visibility="gone">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeView_refresh_layout_vehicle_lines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:id="@+id/no_records_vehicle_details_lines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/no_records_available"/>
        </android.support.v4.widget.SwipeRefreshLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/search_linear_vehicle_lines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/comments_small">
                <SearchView
                    android:id="@+id/vehicle_search_lines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/comments_small"
                    android:queryBackground="@android:color/transparent"
                    android:searchIcon="@drawable/search_icon"/>
            </LinearLayout>
        </ScrollView>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_vehicle_lines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/vehicle_search_list_lines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="0.67dp"
                android:dividerHeight="0.67dp"
                android:divider="#dcdcdc" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/vehicle_view_layout_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/vehicle_details"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/backLayout_lines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/backImage_lines"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:background="@drawable/next" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_no"
                    android:textColor="#000000"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="#f2f2f2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_expiry"
                    android:textColor="#000000"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_status"
                    android:textColor="#000000"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="#f2f2f2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_total"
                    android:textColor="#000000"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/vehicle_no_lines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DXB001"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="#f2f2f2"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/vehicle_expiry_lines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22/05/2018"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/vehicle_status_lines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Active"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="#f2f2f2"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/vehicle_total_lines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="34"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>